--- a/lmao.html
+++ b/lmao.html
@@ -12,7 +12,7 @@
 <body>
  
     <!-- Heading Content -->
-    <h1>GeeksforGeeks</h1>
+    <h1>Shashvat Singh</h1>
  
     <h3>Basic form design using HTML</h3>
  
